# lr-maskbid

./: README.md
Client/: .gitignore  build.gradle  settings.gradle
Client/src/main/java/org/MaskBid/: Account.java  AmopCB.java  AmopResponseCB.java  AuditProcesser.java  BidManager.java  BidProcesser.java  Communicate.java  FileToByteArrayHelper.java  Files.java  Global.java  MaskBid.java  MaskBidServer.java  Parameters.java  Register.java  SBid.java  SBidBC.java  Tender.java
Client/src/main/resources/static/: bidder.html  index.html  readme.html  tender.html
Contract/: MaskBid.sol  sdkConfig.toml
Core/: .gitignore  CMakeLists.txt  CMakeSettings.json
Core/src/: CMakeLists.txt  global.cpp  global.h  main.cpp
Core/src/0base/: Cipher_elg.cpp  Cipher_elg.h  Cyclic_group.cpp  Cyclic_group.h  G_mem.cpp  G_mem.h  G_q.cpp  G_q.h  Mod_p.cpp  Mod_p.h  base.h  network.cpp  network.h  sha256.cpp  sha256.h
Core/src/1ElGamal/: ElGamal.cpp  ElGamal.h
Core/src/1Pedersen/: Pedersen.cpp  Pedersen.h  multi_expo.cpp  multi_expo.h
Core/src/1commitment/: commitment.cpp  commitment.h
Core/src/2cipherGen/: cipherGen.cpp  cipherGen.h
Core/src/2compare/: compare.cpp  compare.h
Core/src/2decrypt/: decrypt.cpp  decrypt.h
Core/src/2paraGen/: paraGen.cpp  paraGen.h
Core/src/2shuffle/: Functions.cpp  Functions.h  Prover_toom.cpp  Prover_toom.h  Verifier_toom.cpp  Verifier_toom.h  func_pro.cpp  func_pro.h  func_ver.cpp  func_ver.h  shuffle.cpp  shuffle.h
Core/src/3sBid/: sBid.cpp  sBid.h
Core/src/3server/: server.h
MaskBidApp/: Dockerfile  sBid
(+2 files in other folders)
